[package]
name = "relay-service"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-core = "^31.0"
bip39 = "^2.0"
seed15 = "^0.1"
crossterm = "0.27.0"
win_run = "0.2.1"
mongodb = {version= "^2.4", features= ["tokio-runtime"] }
tokio = { version = "1.29.1", features = ["full"] }